...
    "newRule.navigationTitle" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "New Rule"
          }
        }
      }
    },
    "newRule.presetSummaryFormat" : {
      "extractionState" : "manual",
...
    "rulesList.ruleLimitAlertTitle" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rule limit reached"
          }
        }
      }
    },
    "screenTimeAccess.description" : {
      "extractionState" : "manual",
...
    "shield.primaryButtonLabel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
        }
      }
    },
    "status.activeLeft" : {
      "extractionState" : "manual",
...
