...
            .navigationTitle(CopyKey.rulesListNavigationTitle.resource)
            .toolbar {
                ToolbarItem(placement: .topBarTrailing) {
                    Button(CopyKey.rulesListNewRuleButton.resource, systemImage: "plus") {
                        attemptNewRule()
                    }
                    .accessibilityIdentifier("newRuleButton")
                }
            }
        }
        .sheet(item: $detailRule) { rule in
            RuleDetailSheet(rule: rule)
        }
...
